done some changes

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="COSWO - Transparent Donation Platform"
     />
-    <title>COSWO</title>
+    <title>Say Whatt</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
